--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,6 @@
 
+set-option -g status-style bg=black
+set-option -g base-index 1
 
 set -g prefix C-a
 set -g mouse on
@@ -15,9 +17,19 @@ unbind '"'	# default split-window -v
 unbind r
 
 bind C-a send-prefix
-bind - split-window -h
-bind = split-window -v
+bind - split-window -v -c '#{pane_current_path}'
+bind = split-window -h -c '#{pane_current_path}'
 bind r source-file ~/.tmux.conf	# Reload config
+
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-9 select-window -t 9
 
 
 # List of plugins
@@ -28,5 +40,10 @@ bind r source-file ~/.tmux.conf	# Reload config
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continnum-restore 'on'
 
 run '~/.tmux/plugins/tpm/tpm'	# Keep that in the end of file
