--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,6 +15,7 @@ unbind C-b 	# default prefix
 unbind %		# default split-window -h
 unbind '"'	# default split-window -v
 unbind r
+unbind m		# default mark current pane
 
 bind C-a send-prefix
 bind - split-window -v -c '#{pane_current_path}'
@@ -31,6 +32,11 @@ bind -n M-7 select-window -t 7
 bind -n M-8 select-window -t 8
 bind -n M-9 select-window -t 9
 
+bind m resize-pane -Z
+bind -r h resize-pane -L 3
+bind -r l resize-pane -R 3
+bind -r j resize-pane -D 3
+bind -r k resize-pane -U 3
 
 # List of plugins
 # Prefix + I to install
