--- a/i3/.config/i3/keybinds.conf
+++ b/i3/.config/i3/keybinds.conf
@@ -1,7 +1,7 @@
 # Execute Program
 bindsym Print exec flameshot gui 
 bindsym $mod+b exec $BROWSER
-bindsym $mod+Return exec $TERMINAL
+bindsym $mod+Return exec $TERM
 bindsym $mod+m exec spotify
 bindsym $mod+d exec --no-startup-id rofi -show drun
 
