--- a/i3/.config/i3/theme.conf
+++ b/i3/.config/i3/theme.conf
@@ -7,7 +7,7 @@ set $gray		#222222
 set $base05 #ddc7a1
 set $base06 #ebdbb2
 set $white  #ffffff
-set $red		#ff0000
+set $red		#f34a4a
 set $base09 #e78a4e
 set $base0A #d8a657
 set $base0B #a9b665
