--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -8,15 +8,14 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 
 # Wallpaper
-exec_always feh --bg-fill /home/breno/Pictures/wallpapers/wallpaper04.png
+exec_always feh --bg-fill --randomize $HOME/.local/share/wallpaper/*
 
 # Composer 
+exec_always picom -b
 
-# Touchpad configuration
-exec_always xinput -set-prop 11 294 1
-exec_always xinput -set-prop 11 302 1
 exec_always pkill polybar
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+
 floating_modifier $mod
 
 # Worksapaces names
