update statys bar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,15 +1,24 @@
-
-set-option -g status-style bg=black
-set-option -g base-index 1
-
 set -g prefix C-a
 set -g mouse on
+
+set -g status-bg black
+
+set -g status-left-length 100
+set -g status-left "\
+#[bg=cyan]#[fg=white, bold]#{pane_current_path} \
+#[bg=yellow]#[fg=black]#{simple_git_status}\
+"
+
+set -g status-right "\
+#[bg=white]#[fg=black] %H:%M - %d/%m/%y \
+"
+
+set -g base-index 1
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
-
 
 unbind C-b 	# default prefix
 unbind %		# default split-window -h
@@ -48,6 +57,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'kristijanhusak/tmux-simple-git-status'
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continnum-restore 'on'
