--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -5,16 +5,16 @@ colors:
 
   normal:
     black:   '0x000000'
-    red:     '0xf34a4a'
+    red:     '0xff0a0a'
     green:   '0xbae67e'
-    yellow:  '0xffee99'
+    yellow:  '0xffee00'
     blue:    '0x73d0ff'
     magenta: '0xd4bfff'
-    cyan:    '0x83CEC6'
+    cyan:    '0x1c83f6'
     white:   '0xffffff'
+    gray:    '0xaaaaaa'
 
   bright:
-    black:   '0x737d87'
     red:     '0xff3333'
     green:   '0xc2d94c'
     yellow:  '0xe7c547'
@@ -24,6 +24,7 @@ colors:
     white:   '0xffffff'
 
 font:
+  size: 11
   normal:
     family: HackNerdFont
     style: Regular
@@ -36,6 +37,13 @@ font:
   bold_italic:
     family: HackNerdFont
     style: Bold Italic
+
+shell:
+  program: /bin/zsh
+  args:
+    - -l
+    - -c
+    - "tmux attach || tmux"
 
 key_bindings:
   - { key: N,  mods: Super,  action: SpawnNewInstance}
