update status bar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,19 +1,23 @@
 set -g prefix C-a
 set -g mouse on
 
+set -g base-index 1
+
 set -g status-bg black
+set -g status-justify centre
+set-option -g status-position bottom
 
 set -g status-left-length 100
 set -g status-left "\
-#[bg=cyan]#[fg=white, bold]#{pane_current_path} \
+#[bg=cyan]#[fg=black, bold]#{pane_current_path} \
 #[bg=yellow]#[fg=black]#{simple_git_status}\
+#[bg=red] #I \
 "
 
 set -g status-right "\
-#[bg=white]#[fg=black] %H:%M - %d/%m/%y \
+#[bg=white, bold]#[fg=black] %H:%M - %d/%m/%y \
 "
 
-set -g base-index 1
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
