--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -7,12 +7,6 @@ exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 
-# Wallpaper
-exec_always feh --bg-fill --randomize $HOME/.local/share/wallpaper/*
-
-# Composer 
-exec_always picom -b
-
 exec_always pkill polybar
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
@@ -52,7 +46,9 @@ bindsym $mod+a focus parent
 # reload the configuration file
 bindsym $mod+Shift+r restart
 
+# Desable Border
+default_border pixel 1
+
 include $HOME/.config/i3/variables.conf
 include $HOME/.config/i3/settings.conf
 include $HOME/.config/i3/keybinds.conf
-include $HOME/.config/i3/theme.conf
