--- a/i3/.config/i3/keybinds.conf
+++ b/i3/.config/i3/keybinds.conf
@@ -3,7 +3,7 @@ bindsym Print exec flameshot gui
 bindsym $mod+b exec $BROWSER
 bindsym $mod+Return exec $TERM
 bindsym $mod+m exec spotify
-bindsym $mod+d exec --no-startup-id rofi -show drun
+bindsym $mod+d exec dmenu_run
 
 # Fn brightness
 bindsym XF86MonBrightnessUp exec brightnessctl set +10 
