--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,6 +18,9 @@ set -g status-right "\
 #[bg=white, bold]#[fg=black] %H:%M - %d/%m/%y \
 "
 
+# True colors
+set-option -g default-terminal "tmux-256color"
+set-option -ag terminal-overrides ",xterm-256color:RGB"
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
@@ -50,6 +53,7 @@ bind -r h resize-pane -L 3
 bind -r l resize-pane -R 3
 bind -r j resize-pane -D 3
 bind -r k resize-pane -U 3
+
 
 # List of plugins
 # Prefix + I to install
