--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -44,6 +44,8 @@ shell:
     - -l
     - -c
     - "tmux attach || tmux"
+env:
+  TERM: xterm-256color
 
 key_bindings:
   - { key: N,  mods: Super,  action: SpawnNewInstance}
