--- a/i3/.config/i3/keybinds.conf
+++ b/i3/.config/i3/keybinds.conf
@@ -1,9 +1,9 @@
 # Execute Program
 bindsym Print exec flameshot gui 
 bindsym $mod+b exec $BROWSER
-bindsym $mod+Return exec $TERM
-bindsym $mod+m exec spotify
-bindsym $mod+d exec dmenu_run
+bindsym $mod+Return exec $TERMINAL
+bindsym $mod+m exec spotify-laucher
+bindsym $mod+d exec rofi -show drun
 
 # Fn brightness
 bindsym XF86MonBrightnessUp exec brightnessctl set +10 
