--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -2,22 +2,23 @@
 background = #000
 foreground = #fff
 
-red = #ff3333
+red = #ff1111
 gray = #737d87
 black = #000
 white = #fff
 
 [bar/bar1]
+enable-ipc = true
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
 height = 20
 ;offset-x = 1%
 ;offset-y = 1%
-;
+
 padding = 5
 radius = 0
 fixed-center = false
-bottom = true
+bottom = false
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -32,7 +33,7 @@ font-0 = "Hack Nerd Font:size=10:weight=bold;2"
 
 modules-left = i3 
 modules-center = date
-modules-right = backlight pulseaudio battery
+modules-right = kb-layout backlight pulseaudio battery
 
 tray-position = right
 tray-padding = 2
@@ -48,6 +49,21 @@ scroll-down = i3wm-wsprev
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+[module/kb-layout]
+;type = custom/script
+;exec = $HOME/script/kb-layout.sh
+;interval = 1
+;click-left = $HOME/script/kb-layout.sh toggle
+
+type = custom/ipc
+hook-0 = $HOME/script/kb-layout.sh
+hook-1 = "$HOME/script/kb-layout.sh toggle"
+format = <label>
+format-1 = <label>
+label = %output%
+initial = 1
+click-left = "#kb-layout.hook.1"
 
 [module/i3]
 type = internal/i3
@@ -97,7 +113,7 @@ label-urgent-padding = 1
 [module/backlight]
 type = internal/backlight
 
-card = amdgpu_bl0
+card = amdgpu_bl1
 
 use-actual-brightness = true
 
