remove: statusbar and unused plugins

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,8 @@
 set -g prefix C-a
 set -g mouse on
 
+set -g status off
+
 set -g base-index 1
 
 set -g status-bg black
@@ -19,8 +21,9 @@ set -g status-right "\
 "
 
 # True colors
-set-option -g default-terminal "tmux-256color"
-set-option -ag terminal-overrides ",xterm-256color:RGB"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
@@ -61,13 +64,7 @@ bind -r k resize-pane -U 3
 # Prefix + alt + u to uninstall 
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'kristijanhusak/tmux-simple-git-status'
 
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continnum-restore 'on'
 
 run '~/.tmux/plugins/tpm/tpm'	# Keep that in the end of file
