--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -1,22 +1,9 @@
 backend = "glx"
 
-## Opacity
+fading = true;
+fade-delta = 5;
+corner-radius = 5;
 
-active-opacity = 1;
-blur-background = true;
-
-blur-method = "dual_kawase";
-blur-strength = 3;
-
-opacity-rule = [
-	"90:class_g = 'Alacritty'",
-	"90:class_g = 'Rofi'",
-	"70:class_g = 'Polybar'"
-];
-
-
-## Fading
-
-fading = true
-fade-delta = 3
-fade-in-step = 0.03
+rounded-corners-exclude = [
+	"class_g = 'Polybar'"
+]
