fix: rofi icons

--- a/i3/.config/i3/keybinds.conf
+++ b/i3/.config/i3/keybinds.conf
@@ -3,7 +3,7 @@ bindsym Print exec flameshot gui
 bindsym $mod+b exec $BROWSER
 bindsym $mod+Return exec $TERMINAL
 bindsym $mod+m exec spotify-laucher
-bindsym $mod+d exec rofi -show drun
+bindsym $mod+d exec rofi -show drun -show-icons
 
 # Fn brightness
 bindsym XF86MonBrightnessUp exec brightnessctl set +10 
