--- a/config/polybar/config
+++ b/config/polybar/config
@@ -18,7 +18,7 @@ height = 20
 padding = 5
 radius = 0
 fixed-center = false
-bottom = false
+bottom = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
