--- a/config/i3/keybinds.conf
+++ b/config/i3/keybinds.conf
@@ -1,3 +1,4 @@
+# !i3config
 # Execute Program
 bindsym Print exec flameshot gui 
 bindsym $mod+b exec $BROWSER
@@ -35,6 +36,8 @@ bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
+
+bindsym $mod+Tab move workspace to output next
 
 # Change focus
 bindsym $mod+h focus left
