--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -1,9 +1,3 @@
-backend = "glx"
-
-fading = true;
-fade-delta = 5;
-corner-radius = 5;
-
-rounded-corners-exclude = [
-	"class_g = 'Polybar'"
-]
+backend = "glx";
+glx-no-stencil = true;
+glx-swap-method = "undefined";
