--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,24 +1,12 @@
-set -g prefix C-a
+# set -g prefix C-a
+#unbind C-b 	# default prefix
 set -g mouse on
 
-set -g status off
+set -g status on
 
 set -g base-index 1
 
-set -g status-bg black
-set -g status-justify centre
-set-option -g status-position bottom
-
-set -g status-left-length 100
-set -g status-left "\
-#[bg=cyan]#[fg=black, bold]#{pane_current_path} \
-#[bg=yellow]#[fg=black]#{simple_git_status}\
-#[bg=red] #I \
-"
-
-set -g status-right "\
-#[bg=white, bold]#[fg=black] %H:%M - %d/%m/%y \
-"
+#set-option -g status-position bottom
 
 # True colors
 set -g default-terminal "tmux-256color"
@@ -30,7 +18,6 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
 
-unbind C-b 	# default prefix
 unbind %		# default split-window -h
 unbind '"'	# default split-window -v
 unbind r
@@ -51,11 +38,13 @@ bind -n M-7 select-window -t 7
 bind -n M-8 select-window -t 8
 bind -n M-9 select-window -t 9
 
-bind m resize-pane -Z
 bind -r h resize-pane -L 3
 bind -r l resize-pane -R 3
 bind -r j resize-pane -D 3
 bind -r k resize-pane -U 3
+
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 
 
 # List of plugins
@@ -65,6 +54,7 @@ bind -r k resize-pane -U 3
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'catppuccin/tmux#2.1.2'
 
 
 run '~/.tmux/plugins/tpm/tpm'	# Keep that in the end of file
